# skypro_06

./: .gitignore  docker-compose.yaml  pyproject.toml
backend_django/: Dockerfile
backend_django/ads/: permissions.py  urls.py
backend_django/ads/migrations/: 0001_initial.py  0002_ad_author_ad_image_comment_author.py  0003_alter_ad_created_at.py  0004_alter_comment_created_at.py
backend_django/ads/models/: __init__.py  ad.py  comment.py
backend_django/ads/serializers/: __init__.py  ad.py  comment.py
backend_django/ads/views/: __init__.py  ad.py  comment.py
backend_django/backend_django/: settings.py  urls.py
backend_django/users/: managers.py  models.py  urls.py
backend_django/users/migrations/: 0001_initial.py  0002_user_image.py  0003_remove_user_date_joined_remove_user_groups_and_more.py  0004_user_is_active.py
deploy/: docker-compose.yaml  nginx.conf  nginx_development.conf
